# pharmacy_shop

./: .gitignore  pyproject.toml
pharmacy/: enums.py  main.py  security.py
pharmacy/database/: core.py
pharmacy/database/models/: admins.py  cart_items.py  checkouts.py  inventories.py  orders.py  users.py
pharmacy/dependencies/: auth.py  database.py  jwt.py  oauth_schemes.py
pharmacy/routers/: admins.py  inventories.py  users.py
pharmacy/schemas/: admins.py  cart_items.py  inventories.py  orders.py  tokens.py  users.py
